hra/patternlab/site/sass/molecules/_glossary-tab.scss
/*------------------------------------*\
    $GLOSSARY TAB
\*------------------------------------*/

.glossary-tab {
    position: absolute;
    top: 180px;
    right: 0;
    z-index: $z-epsilon;
    width: 360px;
    height: 160px;
    background: linear-gradient(to right, #0d61b5, #0c5196);
    transform: translate3d(301px, 0, 0);
    box-shadow: 0 0 25px rgba(0, 0, 0, 0.35);
    transition: transform $default-transition-speed ease, box-shadow $default-transition-speed ease;

    @include media-query(tablet) {
        display: none;
    }

    &--open {
        transform: translate3d(0, 0, 0);
    }

    &--fixed {
        position: fixed;
        top: 121px;
    }

    &__close {
        position: absolute;
        top: 14px;
        right: 11px;
        z-index: $z-milli;
        width: 20px;
        height: 20px;
        cursor: pointer;
        background-color: transparent;
        border: 0;
        transition: opacity $default-transition-speed ease;

        &:focus,
        &:hover {
            opacity: 0.7;
        }

        &::before,
        &::after {
            position: absolute;
            top: 10px;
            left: 0;
            width: 100%;
            height: 2px;
            background-color: #fff;
            content: '';
        }

        &::before {
            transform: rotate(45deg);
        }

        &::after {
            transform: rotate(-45deg);
        }
    }

    &__label {
        @include font-size(epsilon);
        position: absolute;
        top: 50px;
        left: -50px;
        width: 160px;
        height: 60px;
        padding: 0 20px;
        letter-spacing: 1px;
        color: #fff;
        text-align: left;
        cursor: pointer;
        background-color: transparent;
        border: 0;
        border-bottom: 1px solid #5a96ce;
        transform: rotate(-90deg);
        transition: background-color $default-transition-speed ease;

        svg {
            margin: 5px 0 0 5px;
            transform: rotate(90deg);
        }

        &:hover,
        &:focus {
            background-color: #0b4c8e;
            outline: 0;
        }
    }

    &__content {
        position: absolute;
        top: 0;
        left: 60px;
        width: calc(100% - 60px);
        padding: 25px 30px;
        color: #fff;
    }

    &__input {
        @include font-size(zeta);
        @include placeholder-text {
            font-family: $font--primary;
            color: #fff;
            opacity: 1;
        }
        width: 100%;
        padding: 8px 20px;
        color: #fff;
        background-color: transparent;
        border: 2px solid rgba(255, 255, 255, 0.45);
        border-radius: 40px;

        @include media-query(laptop) {
            padding: 10px 20px;
        }
    }

    &__input-label {
        @include rem-font-size(24px);
        display: block;
        margin: 0 0 10px;
    }

    &__submit {
        position: absolute;
        top: 72px;
        right: 35px;
        width: 45px;
        height: 45px;
        cursor: pointer;
        background: {
            position: center;
            color: transparent;
            size: 21px;
            repeat: no-repeat;
            image: url('../images/svg/search.svg');
        }
        border: 0;
        transition: opacity $default-transition-speed;

        &:focus,
        &:hover {
            opacity: 0.7;
        }

        @include media-query(laptop) {
            top: 61px;
            right: 0;
            width: 67px;
            height: 55px;
            background: {
                size: 24px;
            }
        }
    }

    .template-glossary-index & {
        display: none;
    }
}

